--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "Bluice Zhen <bluice.zhen@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "element-ui": "^1.3.7",
     "vue": "^2.3.3"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "vue-loader": "^12.1.0",
+    "vue-router": "^2.6.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
