--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
   "presets": [
-    ["env", { "modules": false }]
-  ]
+    "es2015",
+    "stage-0"
+  ],
+  "plugins": [[
+    "transform-runtime",
+    {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }
+  ]]
 }
