--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "element-ui": "^1.3.7",
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vuex": "^2.3.1",
+    "vuex-localstorage": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
